tests/fixtures/invalid/str_floordiv_set.py
# Cannot floor divide Str and Set[int]
x: str = "hello" // {1, 2, 3}
